2011-08-26  Dimitri Glazkov  <dglazkov@chromium.org>

        Tweak the use of Open Sans in garden-o-matic summary view to make it look decent on Windows and Linux.
        https://bugs.webkit.org/show_bug.cgi?id=67066

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/summary-mock.html: Tweaked.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/summary.html: Ditto.

2011-08-26  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [DRT] Include cairo.h in PixelDumpSupportCairo.h for EFL too.
        https://bugs.webkit.org/show_bug.cgi?id=67041

        Reviewed by Martin Robinson.

        This is a follow-up to r89053: EFL's PixelDumpSupportEfl.cpp includes
        PixelDumpSupportCairo.h, but the latter was #including cairo.h only
        when the GTK+ port was being built.

        * DumpRenderTree/cairo/PixelDumpSupportCairo.h:

2011-08-26  Dimitri Glazkov  <dglazkov@chromium.org>

        Clean up and line up layout in garden-o-matic summary view.
        https://bugs.webkit.org/show_bug.cgi?id=67057

        1) Renamed ui.notifications.TestFailures to ui.notifications.TestsFailing to match BuildersFailing;
        2) Rearranged DOM structure a bit to accommodate recent changes;
        3) Added minimal CSS to line things up.

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers.js: Renamed TestFailures to TestsFailing.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/summary-mock.js: Added mocks for BuildersFailing.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/failures.js: Renamed TestFailures to TestsFailing.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/failures_unittests.js: Updated tests.