@@ -1,5 +1,17 @@
 2011-08-26  Dimitri Glazkov  <dglazkov@chromium.org>
 
+        garden-o-matic summary view should have pretty commit data information.
+        https://bugs.webkit.org/show_bug.cgi?id=67069
+
+        Reviewed by Adam Barth.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications.js: Added support for styling commit data.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications_unittests.js: Changed tests.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/styles/common.css: Defined global anchor color.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/styles/notifications.css: Styled commit data.
+
+2011-08-26  Dimitri Glazkov  <dglazkov@chromium.org>
+
         Tweak the use of Open Sans in garden-o-matic summary view to make it look decent on Windows and Linux.
         https://bugs.webkit.org/show_bug.cgi?id=67066
 
